Another great push

--- a/Views/Home/Form.cshtml
+++ b/Views/Home/Form.cshtml
@@ -1,14 +1,17 @@
 ﻿@{
     ViewData["Title"] = "New Bowler";
 }
-<h1>Add a Bowler</h1>
 
 @model Bowler
+
+<h1>Add a Bowler</h1>
 
 <div class="text-right">
     <form method="post" asp-controller="Home" asp-action="Form">
         <h2>Enter bowler details here:</h2>
 
+        @*<input asp-for="BowlerID" type="hidden" required />
+            <br />*@
         <br />
         <label asp-for="BowlerFirstName">First Name:</label>
         <input asp-for="BowlerFirstName" />
@@ -34,11 +37,26 @@
         <label asp-for="BowlerPhoneNumber">Phone:</label>
         <input asp-for="BowlerPhoneNumber" />
         <br />
-        <label asp-for="TeamID">TeamID:</label>
-        <input asp-for="TeamID" />
+        <label asp-for="TeamID">Team:</label>
+        <select asp-for="TeamID" required>
+            <option value="">Select Category</option>
+
+            <option value="1">Marlins</option>
+            <option value="2">Sharks</option>
+            <option value="3">Terrapins</option>
+            <option value="4">Barracudas</option>
+            <option value="5">Dolphins</option>
+            <option value="6">Orcas</option>
+            <option value="7">Manatees</option>
+            <option value="8">Swordfish</option>
+            <option value="9">Huckleberrys</option>
+            <option value="10">MintJuleps</option>
+
+
+        </select>
         <br />
         <br />
-        <button type="submit" class="btn btn-success btn-sm">Add Bowler</button>
+        <button type="submit" class="btn btn-success btn-sm">Save</button>
 
         <br />
         <br />
