--- a/Views/Home/Confirmation.cshtml
+++ b/Views/Home/Confirmation.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class="text-center">
-    <h2>A new bowler has been added to the databse</h2>
+    <h2>The action was successful</h2>
     <br />
     <a class="btn btn-primary" asp-controller="Home" asp-action="Index">Return Home</a>
 </div>
