--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,6 +5,22 @@
 @model List<Bowler>
 
 <div class="card mx-center">
+
+    <div>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="1" class="btn btn-primary">Marlins</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="2" class="btn btn-primary">Sharks</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="3" class="btn btn-primary">Terrapins</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="4" class="btn btn-primary">Barracudas</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="5" class="btn btn-primary">Dolphins</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="6" class="btn btn-primary">Orcas</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="7" class="btn btn-primary">Manatees</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="8" class="btn btn-primary">Swordfish</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="9" class="btn btn-primary">Huckleberrys</a>
+        <a asp-controller="Home" asp-action="Team" asp-route-teamid="10" class="btn btn-primary">MintJuleps</a>
+        <br />
+        <br />
+    </div>
+
     <table class="table table-bordered table-striped">
 
         <thead class="font-weight-bold">
